  usage of the functions involved in the change. SQuirreL will not load the "Edit Extras"-Plugin anymore.

Updated Polish translation. Thanks to Begina Felicysym.

Syntax plugin: Last five find strings are now saved and can be selected from the drop down of the find and replace dialog.


Bug fixes:

#1236 Shortcut for comment/uncomment current line (ctrl + "/") does not work
  Fixed according to the suggestion in the bug #1236
  Please note: The orginal comment/uncomment hot key of SQuirreL is ctrl+Numpad minus / ctrl+shift+Numpad minus.

Current SQL Mark was shown in Object tree find field.

#1226 Reconnect didn't work when Session toolbar was configured to be not shown.
  See menu "File" --> "New Session Properties" --> Tab "General" and check the "Show toolbar" check box.


Object tree: Contents tab loading raised ClassCastException when table contents where viewed as text output.

NullPointerException occurred when the "Show foreign key references" right mouse menu item of an SQL result table was clicked.

3.7.0 (09/14/2015)
==================

Enhancements:

Feature request #521 Alias name in SQL History search dialog.

Upgraded to latest RSyntax version (2.5.6).
  The new version has a clipboard history which is accessible through ctrl shift v.
  A little drawback of the new version is that background colors are not supported in syntax styles.


Feature request #485 Execute multiple SQL statements on one click without selection
   The new feature executes all SQLs in the editor.
   If there are multiple SQLs in the editor the statement separator has to be used.
   The feature is accessible through a new tool bar button, tools popup and the alt shift ENTER key combination


Feature request #484 Query output preferences --> Allow table and text output simultaneously
   Note: SQL result output as table or editable table now includes text output in an extra tab.